fix single trip stretch in trips list when only one element added

--- a/public/sass/partials/_trips.scss
+++ b/public/sass/partials/_trips.scss
@@ -8,6 +8,7 @@
   &__list {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(26rem, 1fr));
+    grid-template-rows: min-content;
     grid-gap: $gap-small;
     margin-bottom: $gap-medium;
 
@@ -41,7 +42,7 @@
 
   &__photo {
     width: 25%;
-    height: 90%;
+    height: 100%;
 
     @include mq(md) {
       width: 100%;
